// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameContext GameProvider renders properly 1`] = `
<ContextProvider
  value={
    Object {
      "gameInfo": Object {
        "boards": Object {},
        "bunch": Array [],
        "countdown": 0,
        "gameId": "gameId",
        "gameName": "",
        "hands": Object {},
        "players": Array [],
        "previousSnapshot": null,
        "status": "NOT_STARTED",
      },
      "handleDump": [MockFunction handleDump],
      "handleMoveAllTilesFromBoardToHand": [MockFunction handleMoveAllTilesFromBoardToHand],
      "handleMoveTileFromBoardToHand": [MockFunction handleMoveTileFromBoardToHand],
      "handleMoveTileFromHandToBoard": [MockFunction handleMoveTileFromHandToBoard],
      "handleMoveTileOnBoard": [MockFunction handleMoveTileOnBoard],
      "handlePeel": [MockFunction handlePeel],
      "isInGame": true,
      "walkthroughEnabled": true,
    }
  }
>
  Children
</ContextProvider>
`;

exports[`GameContext getEmptyGameState generates default empty state 1`] = `
Object {
  "gameInfo": Object {
    "boards": Object {},
    "bunch": Array [],
    "countdown": 0,
    "gameId": "gameId",
    "gameName": "",
    "hands": Object {},
    "players": Array [],
    "previousSnapshot": null,
    "status": "NOT_STARTED",
  },
  "handleDump": [Function],
  "handleMoveAllTilesFromBoardToHand": [Function],
  "handleMoveTileFromBoardToHand": [Function],
  "handleMoveTileFromHandToBoard": [Function],
  "handleMoveTileOnBoard": [Function],
  "handlePeel": [Function],
  "isInGame": false,
  "walkthroughEnabled": false,
}
`;
